# OpenAudit

./: MISC_CHARGES_README.md  Makefile  OpenAudit_Logic_and_Outcomes.md  README.md  app.py  audit_engine.py  auth.py  contract_benchmarks.py  contract_parser.py  contract_strategy_generator.py  contract_visualization.py  data_validator.py  data_visualizer.py  database.py  freight_ai_advisor.py  merge_utils.py  pdf_processor.py  pyproject.toml  replit.md  report_generator.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--Contract-parsing-module-for-extracting-key-terms-from-carrier-contracts-Supports-PDF-and-Excel-f-1759622573372_1759622573374.txt  Pasted--Database-models-and-connection-manager-for-RateWise-application-import-os-from-sqlalchem-1759616551684_1759616551685.txt  Pasted-OpenAudit-Platform-A-comprehensive-freight-invoice-audi_1769799220256.txt  Pasted-You-are-a-senior-Python-Streamlit-engineer-Implement-a-self-contained-feature-in-my-freight-audit-a-1761935598507_1761935598507.txt  Pasted-You-are-an-expert-freight-audit-analyst-and-technical-writer-Your-task-is-to-produce-a-single-well-1762184094324_1762184094324.txt  Pasted-You-are-building-a-Python-FastAPI-React-or-Flask-simple-frontend-app-for-a-freight-auditing--1762979286200_1762979286200.txt  Pasted-import-pandas-as-pd-import-numpy-as-np-from-datetime-import-datetime-timedelta-import-re-from-t-1759614297333_1759614297335.txt  Pasted-import-pandas-as-pd-import-numpy-as-np-from-typing-import-Dict-List-Optional-Union-import-re--1759615612878_1759615612880.txt  (+1 more)
audits/: misc_nonship.py
(+8 files in other folders)
