[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "seaborn>=0.13.2",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "tabula>=1.0.5",
    "tabula-py>=2.10.0",
    "urllib3>=2.6.0",
    "xlrd>=2.0.2",
]
